2002-11-22  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-words-filename): find lilypond.words
	from load-path.
	
	* lilypond-mode.el (LilyPond-autocompletion): shows completions in
	the mini-buffer with Control-Shift-c.
	
2002-11-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (tempo_event): use tempo-unit for \tempo
	duration. This fixes \tempo taking time.

2002-11-21  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/volta-engraver.cc (process_acknowledged_grobs): 
	Allow for text markup in repeatCommands. 

2002-11-21  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-insert-string): new function, use it
	in LilyPond-insert-tag-notes. LilyPond-insert-between, new function.
	Get rid of skeleton.el-dependency.

	* Documentation/topdocs/INSTALL.texi: tell how to get syntax-highlight.

2002-11-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam-engraver.cc (stop_translation_timestep): reset now_stop_ev_

	* lily/scm-option.cc: add parse-protect to ly:set-option

	* lily/lexer.ll: set errorlevel if GUILE fails during parse.

2002-11-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/ligature-bracket.hh: removed
	* lily/ligature-bracket.cc: removed

	* lilypond-mode.el (LilyPond-expand-alist): set LaTeX extension to .tex

	* lily/beam.cc (set_beaming): don't change beam count on rests.
	(brew_molecule): always set flag-width > 0.

2002-11-19  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: LilyPond-imenu-generic-re: only alphabetic chars,
	remove instructions; instead, refer to lilypond-init.el and
	Documentation/topdocs/INSTALL.texi.

	* lilypond.words: add identifiers and reserved words.

	* Documentation/topdocs/INSTALL.texi: separate sections for installing
	files and adding a load-path.

	* lilypond-init.el: Instructions, extracted from 
	Documentation/topdocs/INSTALL.texi. 
	
2002-11-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.8 released 

	* lily/grob.cc (warning): better robustness fix.
